# artifactcalculator

./: .gitignore  README.md  pyproject.toml
src/artifactcalculator/: main.py
tests/: test_artifact.md  test_gui.py  test_main.py
